Capitulo_17_Real_World_Application/parse/registry-ingress/host-ingress-kuard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress-kuard
  namespace: kube-system
spec:
  rules:
    - host: registry.local.com
      http:
        paths:
          - backend:
              service:
                name: registry
                port:
                  number: 80
            pathType: Prefix
            path: /
